將LLM執行環境打包成Dockerfile
- server.py
執行JSON-RPC Server
- llm.py
提供phi-128k為基礎的LLM功能

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ TaipeiCityDashboardDataPy/db/embedding.txt
 TaipeiCityDashboardDataPy/model/mistral-7b-instruct-v0.1.Q3_K_S.gguf
 TaipeiCityDashboardDataPy/model/Phi 3 mini 128k instruct.gguf
 TaipeiCityDashboardDataPy/model/Phi-3 Mini 4k Instruction.gguf
+TaipeiCityDashboardDataPy/Phi 3 Mini 128k Instruct.gguf
