--- a/TaipeiCityDashboardDataPy/requirements.txt
+++ b/TaipeiCityDashboardDataPy/requirements.txt
@@ -1,4 +1,8 @@
-orjson==3.10.1
+jsonrpclib_pelix==0.4.3.2
+orjson==3.10.2
 pandas==2.2.2
 psycopg2_binary==2.9.9
 Requests==2.31.0
+sentence_transformers==2.7.0
+torch==2.3.0
+llama-cpp-python==0.2.68
