--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,6 +12,17 @@ services:
       - 80:80
       - 443:443
 
+  json-rpc-server:
+    build:
+      context: ../TaipeiCityDashboardDataPy/
+      dockerfile: Dockerfile # 指定使用的 Dockerfile
+    container_name: json_rpc_server
+    restart: always
+    volumes:
+      - ../TaipeiCityDashboardDataPy/:/app
+    ports:
+      - "5555:5555" # 映射容器的 5555 端口到主機的 5555 端口
+
   dashboard-fe:
     image: node:${NODE_IMAGE_TAG:-latest}
     container_name: dashboard-fe
