--- a/.gitignore
+++ b/.gitignore
@@ -59,8 +59,14 @@ Taipei-City-Dashboard-FE/.env.test
 docker/db-data
 # nginx ssl
 docker/nginx/ssl
+
+# LLM weights
 TaipeiCityDashboardDataPy/db/embedding.txt
 TaipeiCityDashboardDataPy/model/mistral-7b-instruct-v0.1.Q3_K_S.gguf
 TaipeiCityDashboardDataPy/model/Phi 3 mini 128k instruct.gguf
 TaipeiCityDashboardDataPy/model/Phi-3 Mini 4k Instruction.gguf
 TaipeiCityDashboardDataPy/Phi 3 Mini 128k Instruct.gguf
+
+# download files
+*.csv
+*.ods
